fix overflow of collection names

--- a/src/components/myNFTs/MyNFTs.scss
+++ b/src/components/myNFTs/MyNFTs.scss
@@ -1919,6 +1919,7 @@
       border-radius: 12px;
       cursor: pointer;
       transition: 0.3s ease-in-out;
+      overflow-wrap: anywhere;
 
       &__header {
         height: 80px;
