--- a/src/components/myNFTs/create/CreateSingleNft.scss
+++ b/src/components/myNFTs/create/CreateSingleNft.scss
@@ -418,6 +418,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+            overflow-wrap: anywhere;
 
             @supports (-webkit-line-clamp: 2) {
               overflow: hidden;
